[package]
name = "esys_entropy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
libp2p = { version = "0.51.1", features = ["kad", "macros", "noise", "tcp", "yamux", "tokio", "identify"] }
rand = "0.8.5"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
